After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 692700 - Fix the xkb layouts language/country grouping
Fix the xkb layouts language/country grouping
Status: RESOLVED FIXED
Product: gnome-desktop
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Desktop Maintainers
Desktop Maintainers
Depends on: 693783
Blocks:
 
 
Reported: 2013-01-28 12:20 UTC by Rui Matos
Modified: 2013-02-19 11:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gnome-languages: Add methods to get language/country from ISO codes (4.11 KB, patch)
2013-01-28 12:20 UTC, Rui Matos
none Details | Review
gnome-xkb-info: Use the correct methods to get language/country (1.90 KB, patch)
2013-01-28 12:20 UTC, Rui Matos
none Details | Review
gnome-languages: Add methods to get language/country from ISO codes (4.11 KB, patch)
2013-02-14 09:27 UTC, Rui Matos
committed Details | Review
gnome-xkb-info: Use the correct methods to get language/country (1.47 KB, patch)
2013-02-14 09:28 UTC, Rui Matos
committed Details | Review

Description Rui Matos 2013-01-28 12:20:38 UTC
This is how I intended it to work but the
get_language/region_from_name methods didn't quite do what I needed.
Comment 1 Rui Matos 2013-01-28 12:20:40 UTC
Created attachment 234607 [details] [review]
gnome-languages: Add methods to get language/country from ISO codes
Comment 2 Rui Matos 2013-01-28 12:20:43 UTC
Created attachment 234608 [details] [review]
gnome-xkb-info: Use the correct methods to get language/country

gnome_get_[language|region]_from_name() wants a locale string, not the
ISO codes in isolation. Since that's what we have when parsing the XML
data we must instead use these new methods that accept the ISO codes
directly.
Comment 3 Rui Matos 2013-02-14 09:27:41 UTC
Created attachment 236009 [details] [review]
gnome-languages: Add methods to get language/country from ISO codes

--
rebased
Comment 4 Rui Matos 2013-02-14 09:28:15 UTC
Created attachment 236010 [details] [review]
gnome-xkb-info: Use the correct methods to get language/country

--
rebased
Comment 5 Matthias Clasen 2013-02-15 10:52:36 UTC
Review of attachment 236009 [details] [review]:

Looks ok
Comment 6 Matthias Clasen 2013-02-15 10:52:46 UTC
Review of attachment 236009 [details] [review]:

Looks ok
Comment 7 Matthias Clasen 2013-02-15 10:53:34 UTC
Review of attachment 236010 [details] [review]:

ok
Comment 8 Rui Matos 2013-02-19 11:14:03 UTC
Attachment 236009 [details] pushed as fc7d260 - gnome-languages: Add methods to get language/country from ISO codes
Attachment 236010 [details] pushed as 8d2ff3d - gnome-xkb-info: Use the correct methods to get language/country