gnome-languages: Add methods to get language/country from ISO codes

https://bugzilla.gnome.org/show_bug.cgi?id=692700